--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ img {
 }
 
 .section {
-  padding: 94px 0;
+  padding: 60px 0;
 }
 
 .no-scroll {
@@ -75,10 +75,14 @@ a {
   color: currentColor;
 }
 
+button {
+  cursor: pointer;
+  outline: transparent;
+}
+
 .container {
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -483,19 +487,19 @@ a {
   color: var(--accent-color);
 }
 
-.navigation__link .current {
-  color: var(--accent-color);
-}
-.navigation__link .current::after {
-  content: "";
+.navigation__current::after {
   position: absolute;
-  display: block;
+  content: "";
   width: 100%;
   height: 4px;
-  left: 0;
-  bottom: -1px;
-  border-radius: 2px;
   background-color: var(--accent-color);
+  border-radius: 2px;
+  left: 0;
+  bottom: -3px;
+}
+
+.navigation__current {
+  color: var(--accent-color);
 }
 
 .contacts__mail,
@@ -631,7 +635,7 @@ a {
 
 .mob-contacts__tel {
   font-weight: 500;
-  font-size: 22px;
+  font-size: 24px;
   line-height: 1.16;
   letter-spacing: 0.02em;
   color: #2196f3;
@@ -639,20 +643,19 @@ a {
 }
 @media screen and (min-width: 480px) {
   .mob-contacts__tel {
-    font-size: 24px;
+    font-size: 34px;
   }
 }
 
-.mob-contacts_mail {
+.mob-contacts__mail {
   font-weight: 500;
-  font-size: 18px;
+  font-size: 24px;
   line-height: 1.16;
   letter-spacing: 0.02em;
   color: #757575;
-  margin-bottom: 64px;
 }
 @media screen and (min-width: 480px) {
-  .mob-contacts_mail {
+  .mob-contacts__mail {
     font-size: 24px;
   }
 }
@@ -700,7 +703,21 @@ a {
 }
 
 .mob-menu-bottom {
+  display: block;
   margin-left: 40px;
+}
+
+.mob-nav__current {
+  color: var(--accent-color);
+}
+
+.mob-nav {
+  display: flex;
+  align-items: center;
+}
+
+.mob-soc {
+  margin-top: 64px;
 }
 
 .general {
@@ -1098,7 +1115,6 @@ a {
 @media screen and (min-width: 768px) {
   .projects-list {
     justify-content: center;
-    margin-bottom: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
