--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -4,19 +4,23 @@ h2,
 h3,
 h4,
 h5 h6 {
-    margin: 0;
+  margin: 0;
 }
 
 ul,
 ol {
-    margin: 0;
-    padding-left: 0;
+  margin: 0;
+  padding-left: 0;
 }
 
 address {
-    font-style: normal;
+  font-style: normal;
 }
 
 a {
-    color: currentColor;
+  color: currentColor;
+}
+button {
+  cursor: pointer;
+  outline: transparent;
 }
