--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -87,20 +87,18 @@
     color: var(--accent-color);
   }
 }
-
-.navigation__link .current {
+.navigation__current::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+  left: 0;
+  bottom: -3px;
+}
+.navigation__current {
   color: var(--accent-color);
-  &::after {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 4px;
-    left: 0;
-    bottom: -1px;
-    border-radius: 2px;
-    background-color: var(--accent-color);
-  }
 }
 
 .contacts__mail,
@@ -210,26 +208,26 @@
 }
 .mob-contacts__tel {
   font-weight: 500;
-  font-size: 22px;
+  font-size: 24px;
   line-height: 1.16;
   letter-spacing: 0.02em;
   color: #2196f3;
   margin-bottom: 32px;
   @include mobile {
-    font-size: 24px;
+    font-size: 34px;
   }
 }
-.mob-contacts_mail {
+.mob-contacts__mail {
   font-weight: 500;
-  font-size: 18px;
+  font-size: 24px;
   line-height: 1.16;
   letter-spacing: 0.02em;
   color: #757575;
-  margin-bottom: 64px;
   @include mobile {
     font-size: 24px;
   }
 }
+
 .mob-soc__link {
   font-weight: 500;
   font-size: 12px;
@@ -262,5 +260,16 @@
   margin-left: 40px;
 }
 .mob-menu-bottom {
+  display: block;
   margin-left: 40px;
+}
+.mob-nav__current {
+  color: var(--accent-color);
+}
+.mob-nav {
+  display: flex;
+  align-items: center;
+}
+.mob-soc {
+  margin-top: 64px;
 }
